--- a/WebBanSach/Views/Home/Index.cshtml
+++ b/WebBanSach/Views/Home/Index.cshtml
@@ -50,13 +50,13 @@
     <div id="owl-demo" class="owl-carousel">
         @foreach (var item in (ViewBag.ListSanPhamMoi as IEnumerable<SanPham>))
         {
-            <div class="item" onclick="location.href='/ChiTietSach/Index';">
+            <div class="item" onclick="location.href='/ChiTiet/Index';">
                 <div class="cau_left">
                     <img class="lazyOwl" src="~/Assets/images/@item.AnhDaiDien" alt="Lazy Owl Image">
                 </div>
                 <div class="cau_left" style="height: 150px;">
-                    <h4 style="height: 50%; overflow: hidden; text-overflow: ellipsis;"><a href="/Chitietsach/Index" style="font-size: 18px; font-weight: 500;">@item.TenSanPham</a></h4>
-                    <a href="/ChiTietSach/Index?ID=@item.SanPhamID" class="btn" style="margin-top: 10px;">Đặt mua</a>
+                    <h4 style="height: 50%; overflow: hidden; text-overflow: ellipsis;"><a href="/Chitiet/Index" style="font-size: 18px; font-weight: 500;">@item.TenSanPham</a></h4>
+                    <a href="/ChiTiet/Index?ID=@item.SanPhamID" class="btn" style="margin-top: 10px;">Đặt mua</a>
                 </div>
             </div>
         }
@@ -91,7 +91,7 @@
                             var @giacu = item.Gia != null ? item.Gia.ToString() + "đ" : "";
                             var @giamoi = item.Gia != null ? item.Gia.ToString() + "đ" : "";
                             <div class="grid1_of_3">
-                                <a href="/ChiTietSach/Index?ID=item.Masach">
+                                <a href="/ChiTiet/Index?ID=@item.SanPhamID">
                                     <img src="~/Assets/images/@item.AnhDaiDien" alt="" style="width: 170px; height: 250px;" />
                                     <h3 style="overflow: hidden; text-overflow: ellipsis; white-space: nowrap;" title="@item.TenSanPham">@item.TenSanPham</h3>
                                     <div class="price">
