--- a/WebBanSach/Views/Shared/_SanPhamLienQuan.cshtml
+++ b/WebBanSach/Views/Shared/_SanPhamLienQuan.cshtml
@@ -1,22 +1,22 @@
 ﻿@using WebBanSach.Models.EF;
-@model IEnumerable<Sach>
+@model IEnumerable<SanPham>
 
 <div class="sellers">
-    <h4>Sách có liên quan</h4>
+    <h4>Sản phẩm có liên quan</h4>
     <div style="height: 850px; overflow-y: scroll;">
         @{
-            foreach (Sach item in Model)
+            foreach (SanPham item in Model)
             {
-                var giamoi = item.Giakm == null ? "" : item.Giakm.ToString() + "đ";
-                var giacu = item.Dongia.ToString() + "đ";
-                <div style="display: flex; margin: 25px auto; width: 200px;" title="@item.Tensach">
+                var giamoi = item.GiaKM == null ? "" : item.GiaKM.ToString() + "đ";
+                var giacu = item.Gia.ToString() + "đ";
+                <div style="display: flex; margin: 25px auto; width: 200px;" title="@item.TenSanPham">
                     <a href="#" style="text-decoration: none; width: 100%">
-                        <img src="~/Assets/images/@item.Hinhminhhoa" alt="image" style="width: 135px; height: 180px;">
+                        <img src="~/Assets/images/@item.AnhDaiDien" alt="image" style="width: 135px; height: 180px;">
                         <div style="font-weight: 700; color: #999; overflow: hidden">
-                            @item.Tensach
+                            @item.TenSanPham
                         </div>
                         <div style="font-weight: 400; color: #1d9d74; font-size: 12px;">
-                            @item.Tacgia.Tentacgia
+                            @item.NSX.TenNSX
                         </div>
                         <div>
                             @if (giamoi == "")
@@ -28,7 +28,7 @@
                             {
                                 <span style="color: #f15c22; font-size: 16px; font-weight: 500;">@giamoi</span>
                                 <span style="color: #333333; text-decoration: line-through; font-size: 12px">@giacu</span>
-                                <span style="padding: 5px; color: #fff; background-color: #f51919;">@((int)(((decimal)item.Dongia - item.Giakm) * 100 / (item.Dongia)))%</span>
+                                <span style="padding: 5px; color: #fff; background-color: #f51919;">@((int)(((decimal)item.Gia - item.GiaKM) * 100 / (item.Gia)))%</span>
                             }
                         </div>
                     </a>
