--- a/WebBanSach/Views/DanhMuc/Index.cshtml
+++ b/WebBanSach/Views/DanhMuc/Index.cshtml
@@ -14,15 +14,17 @@
             <!-- start gallery_sale  -->
             <div class="gallery1">
                 <div class="container">
-                    <ul id="filters" class="clearfix">
-                        @{
-                            var lstDanhMuc = ViewBag.ListDanhMuc as IEnumerable<TheLoai>;
-                            foreach (var item in lstDanhMuc)
-                            {
-                                <li><span class="filter" data-filter="@item.Key">@item.TenLoai</span></li>
+                    <div style="background-color:azure">
+                        <ul id="filters" class="clearfix">
+                            @{
+                                var lstDanhMuc = ViewBag.ListDanhMuc as IEnumerable<TheLoai>;
+                                foreach (var item in lstDanhMuc)
+                                {
+                                    <li><span class="filter" data-filter="@item.Key">@item.TenLoai</span></li>
+                                }
                             }
-                        }
-                    </ul>
+                        </ul>
+                    </div>
                     <div id="portfoliolist">
                         @foreach (SanPham item in Model)
                         {
@@ -31,7 +33,7 @@
                             <div class="portfolio @item.TheLoai.Key" style="height: 490px;" data-cat="@item.TheLoai.Key">
                                 <div class="portfolio-wrapper" title="@item.TenSanPham">
                                     <a href="/ChiTiet/Index?ID=@item.SanPhamID">
-                                        <img src="~/Assets/images/books/@item.AnhDaiDien"style="width: 240px; height: 360px;" alt="Image 2" />
+                                        <img src="~/Assets/images/@item.AnhDaiDien"style="width: 240px; height: 360px;" alt="Image 2" />
                                     </a>
                                     <div class="price" style="text-align: center;">
                                         <h3 style="overflow: hidden; text-overflow: ellipsis; white-space: nowrap; max-height: 27px;">@item.TenSanPham</h3>
