--- a/WebBanSach/Views/GioHang/Index.cshtml
+++ b/WebBanSach/Views/GioHang/Index.cshtml
@@ -124,7 +124,7 @@
                 </div>
             </div>
             <div class="more-product">
-                @{ Html.RenderAction("SachLienQuan", "DanhMuc"); }
+                @{ Html.RenderAction("SanPhamLienQuan", "DanhMuc"); }
             </div>
         </div>
     }
