--- a/WebBanSach/Views/Home/Index.cshtml
+++ b/WebBanSach/Views/Home/Index.cshtml
@@ -50,14 +50,16 @@
     <div id="owl-demo" class="owl-carousel">
         @foreach (var item in (ViewBag.ListSanPhamMoi as IEnumerable<SanPham>))
         {
-            <div class="item" onclick="location.href='/ChiTiet/Index';">
-                <div class="cau_left">
-                    <img class="lazyOwl" src="~/Assets/images/@item.AnhDaiDien" alt="Lazy Owl Image">
-                </div>
-                <div class="cau_left" style="height: 150px;">
-                    <h4 style="height: 50%; overflow: hidden; text-overflow: ellipsis;"><a href="/Chitiet/Index" style="font-size: 18px; font-weight: 500;">@item.TenSanPham</a></h4>
-                    <a href="/ChiTiet/Index?ID=@item.SanPhamID" class="btn" style="margin-top: 10px;">Đặt mua</a>
-                </div>
+            <div class="item">
+                <a href="/ChiTiet/Index?ID=@item.SanPhamID">
+                    <div class="cau_left">
+                        <img class="lazyOwl" src="~/Assets/images/@item.AnhDaiDien" alt="Lazy Owl Image">
+                    </div>
+                    <div class="cau_left" style="height: 150px;">
+                        <h4 style="height: 50%; overflow: hidden; text-overflow: ellipsis;"><a href="/ChiTiet/Index?ID=@item.SanPhamID" style="font-size: 18px; font-weight: 500;">@item.TenSanPham</a></h4>
+                        <a href="/ChiTiet/Index?ID=@item.SanPhamID" class="btn" style="margin-top: 10px;">Đặt mua</a>
+                    </div>
+                </a>
             </div>
         }
     </div>
