--- a/WebBanSach/Views/LienHe/Index.cshtml
+++ b/WebBanSach/Views/LienHe/Index.cshtml
@@ -16,7 +16,7 @@
                         <br><small>
                             <a href="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d7447.211358269735!2d105.78081567265295!3d21.048458112755917!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x0!2zMjHCsDAyJzU0LjIiTiAxMDXCsDQ3JzEwLjAiRQ!5e0!3m2!1svi!2s!4v1556061092548!5m2!1svi!2s"
                             style="color:#777777;text-align:left;font-size:13px;font-family: 'Source Sans Pro', sans-serif;">
-                            Cửa hàng sách tại học viện kỹ thuật quân sự.
+                            Cửa hàng bán đồ điện tử tại học viện kỹ thuật quân sự.
                             </a>
                         </small>
                     </div>
