--- a/WebBanSach/Views/Shared/_Layout.cshtml
+++ b/WebBanSach/Views/Shared/_Layout.cshtml
@@ -76,13 +76,27 @@
                 <div class="h_icon">
                     <ul class="icon1 sub-icon1">
                         <li>
-                            <a class="active-icon c1" href="/LienHe/Index"><i>$300</i></a>
+                            <a class="active-icon c1" href="/LienHe/Index">
+                                @if (Session["USER_SESSION"] == null)
+                                {
+                                    <i>
+                                        $0
+                                    </i>
+                                }
+                                else
+                                {
+                                    var @kh = Session["USER_SESSION"] as KhachHang;
+                                    <i>
+                                        $@kh.Tien
+                                    </i>
+                                }
+                            </a>
                             <ul class="sub-icon1 list">
                                 <li>
                                     <h3>Chưa có sản phẩm nào</h3><a href=""></a>
                                 </li>
                                 <li>
-                                    <p>Nếu có sản phẩm trong danh sách mong muốn của bạn bị thiếu, hãy <a href="contact.html">liên hệ </a>với chúng tôi.</p>
+                                    <p>Nếu có sản phẩm trong danh sách mong muốn của bạn bị thiếu, hãy <a href="/LienHe/Index">liên hệ </a>với chúng tôi.</p>
                                 </li>
                             </ul>
                         </li>
