--- a/WebBanSach/Areas/AdminSite/Views/AdminTrangChu/Index.cshtml
+++ b/WebBanSach/Areas/AdminSite/Views/AdminTrangChu/Index.cshtml
@@ -115,7 +115,7 @@
                     <div class="stat-widget-one">
                         <div class="stat-icon dib"><i class="ti-layout-grid2 text-warning border-warning"></i></div>
                         <div class="stat-content dib">
-                            <div class="stat-text">sách đã bán</div>
+                            <div class="stat-text">sản phẩm đã bán</div>
                             <div class="stat-digit">7700</div>
                         </div>
                     </div>
