--- a/WebBanSach/Areas/AdminSite/Views/Shared/AdminLayout.cshtml
+++ b/WebBanSach/Areas/AdminSite/Views/Shared/AdminLayout.cshtml
@@ -43,8 +43,8 @@
                     <li class="menu-item-has-children dropdown">
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"> <i class="menu-icon fa fa-laptop"></i>Quản lí sản phẩm</a>
                         <ul class="sub-menu children dropdown-menu">
-                            <li><i class="fa fa-puzzle-piece"></i><a href="@Url.Action("TatCaSach","AdminQuanLySach")">Tất cả sách</a></li>
-                            <li><i class="fa fa-id-badge"></i><a href="@Url.Action("ThemSach","AdminQuanLySach")">Thêm sách</a></li>
+                            <li><i class="fa fa-puzzle-piece"></i><a href="@Url.Action("TatCaSach","AdminQuanLySach")">Tất cả sản phẩm</a></li>
+                            <li><i class="fa fa-id-badge"></i><a href="@Url.Action("ThemSach","AdminQuanLySach")">Thêm sản phẩm</a></li>
                         </ul>
                     </li>
                     <li class="menu-item-has-children dropdown">
