--- a/WebBanDoDienTu/Areas/AdminSite/Views/AdminQuanLySanPham/SuaSanPham.cshtml
+++ b/WebBanDoDienTu/Areas/AdminSite/Views/AdminQuanLySanPham/SuaSanPham.cshtml
@@ -84,7 +84,7 @@
                         </div>
                         <div class="row form-group">
                             <div class="col col-md-3"><label for="text-input" class=" form-control-label">Giá(*)</label></div>
-                            <div class="col-12 col-md-4"><input type="number" id="Dongia" name="Dongia" min="0" placeholder="nhập giá" class="form-control" value="@Model.Dongia"></div>
+                            <div class="col-12 col-md-4"><input type="number" id="Dongia" name="Dongia" min="0" placeholder="nhập giá" class="form-control" value="@Model.Gia"></div>
                             <div class="col-md-1">VNĐ</div>
                             <div class="col-md-2 error">@Html.ValidationMessageFor(m => m.Gia, "", new { @class = "text-danger" })</div>
                         </div>
