--- a/WebBanDoDienTu/Areas/AdminSite/Views/AdminQuanLySanPham/TatCaSanPham.cshtml
+++ b/WebBanDoDienTu/Areas/AdminSite/Views/AdminQuanLySanPham/TatCaSanPham.cshtml
@@ -4,7 +4,7 @@
     ViewBag.Title = "TatCaSanPham";
     Layout = "~/Areas/AdminSite/Views/Shared/AdminLayout.cshtml";
 }
-@using WebBanSach.Models.EF
+@using WebBanDoDienTu.Models.EF
 @model IEnumerable<SanPham>
 <div class="container">
     <div class="row">
