--- a/WebBanDoDienTu/Areas/AdminSite/Views/AdminQuanLySanPham/ThemSanPham.cshtml
+++ b/WebBanDoDienTu/Areas/AdminSite/Views/AdminQuanLySanPham/ThemSanPham.cshtml
@@ -3,7 +3,7 @@
     ViewBag.Title = "ThemSanPham";
     Layout = "~/Areas/AdminSite/Views/Shared/AdminLayout.cshtml";
 }
-@using WebBanSach.Models.EF
+@using WebBanDoDienTu.Models.EF
 @model SanPham
 <div class="container">
     <div class="row">
