--- a/WebBanDoDienTu/Areas/AdminSite/Views/AdminQuanLyKhachHang/TatCaKhachHang.cshtml
+++ b/WebBanDoDienTu/Areas/AdminSite/Views/AdminQuanLyKhachHang/TatCaKhachHang.cshtml
@@ -1,11 +1,11 @@
-﻿
-@{
+﻿@{
     ViewBag.Title = "TatCaKhachHang";
     Layout = "~/Areas/AdminSite/Views/Shared/AdminLayout.cshtml";
 }
 @using WebBanDoDienTu.Models.EF
-@model IEnumerable<Khachhang>
+@model IEnumerable<KhachHang>
 @using PagedList.Mvc;
+
 <div class="container">
     <div class="row">
         <div class="animated fadeIn">
