--- a/WebBanDoDienTu/Views/ChiTiet/Index.cshtml
+++ b/WebBanDoDienTu/Views/ChiTiet/Index.cshtml
@@ -1,5 +1,5 @@
 ﻿@{
-    ViewBag.Title = "Chi tiết sản phẩm";
+    ViewBag.Title = "Chi tiết sản phẩm đã chọn";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
