--- a/WebBanDoDienTu/Areas/AdminSite/Views/AdminQuanLySanPham/TatCaSanPham.cshtml
+++ b/WebBanDoDienTu/Areas/AdminSite/Views/AdminQuanLySanPham/TatCaSanPham.cshtml
@@ -12,15 +12,7 @@
             <div class="row">
                 <div class="card-header col-sm-11">
                     <form class="form-inline my-2 my-lg-0 " method="post" action="@Url.Action("TimKiem","AdminQuanLySanPham")">
-                        <input class="form-control mr-sm-2 col-sm-2" name="TenSach" type="text" placeholder="Tên sản phẩm">
-                        @*<div class="form-group col-sm-2">
-                                <select class="form-control col-sm-12">
-                                    <option>Loại sách</option>
-                                    <option>Sách giáo khoa</option>
-                                    <option>Truyện tranh</option>
-                                    <option>Tiểu thuyêt</option>
-                                </select>
-                            </div>*@
+                        <input class="form-control mr-sm-2 col-sm-2" name="TenSanPham" type="text" placeholder="Tên sản phẩm">
 
                         <button type="submit" class="btn btn-dark">Tìm kiếm</button>
                     </form>
@@ -33,15 +25,14 @@
                         <table id="mytable" class="table table-bordred table-striped">
 
                             <thead>
-                            <th>Tên sản phẩm</th>
-                            <th>Loại sản phẩm</th>
-                            <th>Tên nhà sản xuất</th>
-                            <th>Đơn giá</th>
-                            <th>Giảm giá</th>
-                            
-                            <th>Số lượng</th>
-                            <th>Sửa</th>
-                            <th>Xóa</th>
+                                <th>Tên sản phẩm</th>
+                                <th>Loại sản phẩm</th>
+                                <th>Tên nhà sản xuất</th>
+                                <th>Đơn giá</th>
+                                <th>Giảm giá</th>
+                                <th>Số lượng</th>
+                                <th>Sửa</th>
+                                <th>Xóa</th>
                             </thead>
                             <tbody>
                                 @foreach (var sanpham in (@Model as IEnumerable<SanPham>))
@@ -66,13 +57,6 @@
                                             </p>
                                         </td>
                                         <td>
-                                            @*<p data-placement="top" data-toggle="tooltip" title="Delete" id="@sach.Masach">
-                                                    <a data-title="Delete"  data-toggle="modal" data-target="#myModal">
-                                                        <button class="btn btn-danger btn-xs" data-title="Delete" data-toggle="modal" data-target="#delete">
-                                                            <i class="fa fa-trash" aria-hidden="true"></i>
-                                                        </button>
-                                                    </a>
-                                                </p>*@
                                             <p data-placement="top" class="modal-delete" data-toggle="tooltip" title="Delete">
                                                 <a class="btn btn-danger btn-xs" data-title="Delete" id="@sanpham.SanPhamID" data-toggle="modal" data-target="#myModal">
                                                     <i class="fa fa-trash" aria-hidden="true" style="color:#ffffff"></i>
@@ -83,14 +67,6 @@
                                 }
                             </tbody>
                         </table>
-                        @*<nav aria-label="Page navigation example">
-                                @Html.PagedListPager(
-                                                     Model,
-                                                     page => Url.Action("TatCaSach", new { page, @class = "pagination" }),
-                                                     new PagedListRenderOptions() {
-                                                         LiElementClasses = new string[] { "page-item" }
-                                                     })
-                            </nav>*@
                     </div>
 
                 </div>
@@ -112,9 +88,9 @@
             <div class="modal-body">
                 <p>Bạn có chắc chắn muốn xóa không ?</p>
             </div>
-            <input type="text" hidden id="idSach" />
+            <input type="text" hidden id="MaSanPham" />
             <div class="modal-footer">
-                <button class="btn btn-default" id="btnDelete">Có</button>
+                <button class="btn btn-default" id="btnDelete" style="background-color: red;">Có</button>
                 <button type="button" class="btn btn-default" data-dismiss="modal">Không</button>
             </div>
         </div>
@@ -126,12 +102,12 @@
     // xóa sản phẩm
     $('#myModal').on('show.bs.modal', (e) => {
         const link = e.relatedTarget;
-        let MaSach = parseInt(jQuery(link).attr('id'));
+        let MaSanPham = parseInt(jQuery(link).attr('id'));
         jQuery('#btnDelete').click(() => {
             jQuery.ajax({
                 url: '/AdminQuanLySanPham/XoaSanPham',
                 method: 'POST',
-                data: { MaSach },
+                data: { MaSanPham },
                 dataType: 'text',
                 success: (response) => {
                     response = JSON.parse(response)
